played around with index and styling

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
 
-    <h1><em>My Daily Chores</em><br>
-      When one task is complete simply click and move to next task
-    </h1>
+    <h1><em>My Daily Chores</em></h1><br>
+      <center><h2>When one task is complete simply click and move to next task</h2></center>
+    
   
 
     <!-- we will put our teact component inside this div -->
